# territory_battler

./: .gitmodules  CMakeLists.txt  setup.sh
ext/: CMakeLists.txt
scripts/: setup.sh
src/client/: CMakeLists.txt  client.c  client.h  main.c
src/common/: arena.c  arena.h  darray.c  darray.h  socket.c  socket.h  sockets.c  sockets.h  types.h
src/server/: CMakeLists.txt  main.c  server.c  server.h
